--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <h1>Início</h1>
 
     <nav>
-        <li><a href="/">Início</a></li>
+        <li><a href="/">novo</a></li>
         <li><a href="/login">Login</a></li>
     </nav>
 </body>
