--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <nav>
         <li><a href="/">novo</a></li>
         <li><a href="/login">Login</a></li>
+        <li><a href="/Cadastrar">Cadastrar</a></li>
     </nav>
 </body>
 
